--- a/index.html
+++ b/index.html
@@ -21,13 +21,13 @@
     </div>
     <div class="choises">
         <div class="choise" id="p">
-            <img src="./images/paper.svg" alt="" width="200px">
+            <img src="./paper.svg" alt="" width="200px">
         </div>
         <div class="choise" id="r">
-            <img src="./images/rock.svg" alt="" width="200px">
+            <img src="./rock.svg" alt="" width="200px">
         </div>
         <div class="choise" id="s">
-            <img src="./images/scissors.svg" alt="" width="200px">
+            <img src="./scissors.svg" alt="" width="200px">
         </div>
     </div>
     <p class="article-end">make your move</p>
